# Wordsmith

./: Affix.h  CMakeLists.txt  Wordcrafter.cpp  Wordcrafter.h  main.cpp  mainWindow.cpp  mainWindow.h  ryhmer.h
include/: CMakeLists.txt
syllables25k/: README.md  eight-syllables-sorted-by-prevalence.txt  five-syllables-sorted-by-prevalence.txt  four-syllables-sorted-by-prevalence.txt  seven-syllables-sorted-by-prevalence.txt  six-syllables-sorted-by-prevalence.txt  three-syllables-sorted-by-prevalence.txt  two-syllables-sorted-by-prevalence.txt
